@@ -289,10 +289,15 @@ window.comments = (() => {
     }
 
     // Show comments app
-    const commentNotifications = formElement.querySelector(
+    const commentNotifications = document.querySelector(
       '[data-comment-notifications]',
     );
     commentNotifications.hidden = false;
+    // Attach the comment notifications input to the form using the form attribute
+    // because the input element is outside the form.
+    const notificationsInput = commentNotifications.querySelector('input');
+    notificationsInput.setAttribute('form', formElement.id);
+
     const tabContentElement = formElement.querySelector('.tab-content');
     tabContentElement.classList.add('tab-content--comments-enabled');
 
