@@ -23,6 +23,7 @@ Changelog
  * Fix: Ensure comment buttons always respect `WAGTAILADMIN_COMMENTS_ENABLED` (Thibaud Colas)
  * Fix: Fix error when deleting a single snippet through the bulk actions interface (Sage Abdullah)
  * Fix: Pass the correct `for_update` value for `get_form_class` in `SnippetViewSet` edit views (Sage Abdullah)
+ * Fix: Move comment notifications toggle to the comments side panel (Sage Abdullah)
  * Docs: Update documentation for `log_action` parameter on `RevisionMixin.save_revision` (Christer Jensen)
 
 
